<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Blue Men\'s Morris</string>
    <string name="blue">Blue</string>
    <string name="me">Somveer Saini</string>
    <string name="email">Somveersaini@live.com</string>
    <string name="phone">8090150580</string>
    <string name="fb">fb.com/bluedroid15</string>
    <string name="btnplay">Two Player</string>
    <string name="btnplayai">Single Player</string>
    <string name="netPlay">Network Game</string>
    <string name="settingsBoard">Board Size</string>
    <string name="shortdesc">Play Blue Men\'s Morris with friends over Bluetooth or any Network \nor\n play with Android.</string>
    <string name="details">The basic aim of Blue Mens Morris is to make \"Mills\" - vertical or horizontal lines of three in a row.
Every time this is achieved, an opponent\'s piece is removed.
A player wins by reducing the opponent to two pieces or by leaving him without a legal move.
\n\n
The game proceeds in three phases:
\n\n
Phase 1:
\nPlacing pieces (on vacant position)
\n\n
To begin with the board is empty. The players take turns placing their men one per play on vacant position.
If a player is able to place three of his pieces in a straight line, vertically or horizontally,
he has formed a mill and may remove one of his opponent\'s pieces from the board.
Any piece can be chosen for the removal, but a piece not in an opponent\'s mill must be selected, if possible.
\n\n
Phase 2:
\nMoving pieces (to adjacent position)
\n\n
Players continue to alternate moves, this time moving a man to an adjacent point.
A piece may not jump another piece.
Players continue to try to form mills and remove their opponent\'s pieces in the same manner as in phase one.
A player may break a mill by moving one of his pieces out of an existing mill,
then moving the piece back to form the same mill a second time (or any number of times),
each time removing one of his opponent\'s men.
\n\n
Phase 3:
\nFlying (to any valid position)
\n\n
When a player is reduced to three pieces, there is no longer a limitation on that player of moving to only adjacent position.
The player\'s men may fly to any valid position.
        \n
    Cheers!!!</string>
    <string name="title_activity_ai_main">AiMainActivity</string>

    <string name="txtWaiting">Waiting</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices…</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="bluePlay">Bluetooth Game</string>
    <string name="single1">Choose the level of AI player</string>
    <string name="single2">AI player will have random name.</string>

    <!--  MainActity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving...</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
</resources>
